--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
 
         <h1>Standart pack 350 bgn:</h1>
-        <p>you get your scooter with paintjob color of your choice, key for on/off, charger and headlight </p>
+        <p>you get your scooter with paintjob color of your choice, key for on/off, charger and taillight </p>
         
         <h1>Advanced pack 400 bgn:</h1>
         <p>you get your scooter with paintjob color of your choice, key for on/off, tailight, headlight, charger, horn </p>
