--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="KnL electric scooters inc">
-    <title>🛴KnL electric scooters inc</title>
+    <title>🛴lime-bg electric scooters inc</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -168,7 +168,7 @@
 
 
     <footer>
-        <p>&copy; 2024 KnL electric scooters inc. All rights reserved.</p>
+        <p>&copy; 2024 lime-bg electric scooters inc. All rights reserved.</p>
         <p>Follow me: 
             <a href="https://twitter.com/your_profile" target="_blank">Twitter</a> | 
             <a href="https://linkedin.com/in/your_profile" target="_blank">LinkedIn</a>
