--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="KnL electric scooters inc">
+    <meta name="description" content="lime-bg electric scooters inc">
     <title>🛴lime-bg electric scooters inc</title>
     <link rel="stylesheet" href="style.css">
 </head>
