--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
         <div class="header-content">
             
-            <p>🛴KnL electric scooters inc🛴</p>
+            <p>🛴lime-bg electric scooters inc🛴</p>
         </div>
     </header>
 
